# FloodSense-Lokoja-A-Python-Based-Flood-Risk-Intelligence-and-Decision-Support

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
config/: config.yaml  project.yml
dashboard/: README.md  app.py
docs/: dashboard_guide.md  data_sources.md  exposure_analysis.md  methodology.md  model_design.md  portfolio_summary.md  validation.md
notebooks/: 00_study_area_setup.ipynb  01_data_inventory_and_preprocessing.ipynb  02_dem_terrain_hydrology.ipynb  03_flood_susceptibility_model.ipynb  04_rainfall_scenario_analysis.ipynb  05_sentinel1_flood_validation.ipynb  06_exposure_analysis.ipynb  07_priority_index_decision_support.ipynb  08_static_maps_and_report_figures.ipynb  09_dashboard_layer_preparation.ipynb
outputs/dashboard/: exposure_summary.csv  priority_ranking.csv  validation_metrics.csv
scripts/: 00_download_data.py  01_prepare_data.py  02_run_hydrology.py  03_build_susceptibility_model.py  04_run_sar_validation.py  05_run_exposure_analysis.py  06_build_priority_index.py  07_export_dashboard_layers.py  08_optimize_dashboard_layers.py  fix_clipping.py  inspect_inputs.py  run_pipeline.py
src/floodsense/: __init__.py  config.py  export.py  exposure.py  generate_report.py  hydrology.py  mapping.py  paths.py  preprocessing.py  priority_index.py  rainfall.py  raster_utils.py  sar_validation.py  susceptibility.py  vector_utils.py
src/floodsense_lokoja.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_priority_index.py  test_raster_utils.py  test_susceptibility.py  test_vector_utils.py
(+7 files in other folders)
