[project]
name = "floodsense-lokoja"
version = "0.1.0"
description = "Python-based flood risk intelligence and decision support system for Lokoja, Nigeria."
requires-python = ">=3.11"
dependencies = [
  "geopandas",
  "rasterio",
  "rioxarray",
  "xarray",
  "numpy",
  "pandas",
  "shapely",
  "pyproj",
  "whitebox",
  "rasterstats",
  "osmnx",
  "scikit-learn",
  "matplotlib",
  "folium",
  "streamlit",
  "pyyaml",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
